--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-}
 .form_fields {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -34,6 +29,31 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.header {
+  padding: 8px 16px;
+  border-bottom: 1px solid grey;
+}
+
+.content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%);
+  padding: 16px;
+}
+
+.form_button {
+  width: calc(100% - 8px);
+  box-sizing: border-box;
+  margin: 4px;
+}
+
+output {
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 
 @keyframes logo-spin {
