--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
 :root {
+  --color-background: #242424;
+  --color-tint: #ffffffde;
+  --color-primary: #0052eb;
+
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--color-tint);
+  background-color: var(--color-background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,6 +29,8 @@ a:hover {
 }
 
 body {
+  margin: 0;
+  min-height: 100vh;
 }
 
 h1 {
@@ -32,7 +38,9 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button,
+input[type="button"],
+input[type="submit"] {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -41,25 +49,34 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  outline: 1px solid transparent;
+  transition: border-color 0.25s, outline 0.25s;
 }
-button:hover {
+button:hover,
+input[type="button"]:hover,
+input[type="submit"]:hover {
   border-color: #646cff;
 }
 button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button:focus-visible,
+input[type="button"]:focus,
+input[type="button"]:focus-visible,
+input[type="submit"]:focus,
+input[type="submit"]:focus-visible {
+  outline: 1px solid var(--color-primary);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --color-tint: #213547;
+    --color-background: #ffffff;
   }
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
+  button,
+  input[type="button"],
+  input[type="submit"] {
+    background-color: #e7e8e9;
   }
 }
